2003-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glue/adjustment.c:
	* glue/canvaspoints.c:
	* glue/clipboard.c:
	* glue/colorseldialog.c:
	* glue/combo.c:
	* glue/dialog.c:
	* glue/error.c:
	* glue/event.c:
	* glue/fileselection.c:
	* glue/list.c:
	* glue/object.c:
	* glue/paned.c:
	* glue/program.c:
	* glue/slist.c:
	* glue/style.c:
	* glue/type.c:
	* glue/value.c:
	* glue/widget.c: removed almost all the warnings.

2003-03-22  Lee Mallabone  <gnome@fonicmonkey.net>

	* sample/makefile.in:
	* sample/CalendarApp.cs: Add a sample showing a Gtk.Calendar.

2003-03-15  Duncan Mak  <duncan@ximian.com>

	* gtk/TextBuffer.custom: Fix the Text property. Patch from Mathias
	Hasselmann <mathias.hasselmann@gmx.de>.

2003-03-15  Miguel de Icaza  <miguel@ximian.com>

	* sample: Update samples to new Glade.Widget.

	* glade/WidgetAttribute.cs: Moved the old GladeWidgetattribute
	here.   Now its called `Glade.WidgetAttribute'.
	
	* glade/GladeWidgetAttribute.cs: Removed

	* glib/Idle.cs: Do not allow Idle class to be instantiated.

2003-03-11  Miguel de Icaza  <miguel@ximian.com>

	* gtk/Application.cs (CurrentEvent): Property implementing the
	suggestion from Paolo.

	* glib/Object.cs (Dispose): Destructor might be invoked in a
	thread, queue the object for destruction using the Gtk idle
	handler.   We perform the real destruction of the object in the
	same thread as the Gtk+ main thread.

2003-03-14  Charles Iliya Krempeaux  <charles@reptile.ca>

	* sources/makefile : Added a "distclean" rule, so
	  that typing it will remove any source code directories,
	  and their contents.  (This works by just deleting all
	  the subdirectories.  Except for "CVS" of course.)

2003-03-14  Charles Iliya Krempeaux  <charles@reptile.ca>

	* sample/Makefile.in : Modified it to make it so "make clean"
	  will clean the "sample/rsvg" directory too.  And made it so
	  a "make distclean" will do a distclean to the "sample/rsvg"
	  too.