@@ -1,5 +1,10 @@
 2003-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* sample/Fifteen.cs: work-around for bug 106145 in gnome bugzilla.
+	* sample/DbClient/client.cs: updated to make it compile again.
+
+2003-03-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* glue/adjustment.c:
 	* glue/canvaspoints.c:
 	* glue/clipboard.c:
